# SimpleProcessor

./: .gitignore  Arch.txt  CMakeLists.txt  Makefile  MakefileFlags  README.md  commands.txt  commands_disassembled.txt  compiler.cpp  compiler.h  config.h  helper.cpp  helper.h  main.cpp  main.out  myprog.kitty  o  processor.cpp  processor.h  program.kitty  run_cpu.cpp  run_cpu.h
CPU/: cpu.cat  cpu.cpp  cpu.h
DSL/: commands_syntax.h
arch/: commands.cpp  commands.h  commands_definition.h  cond_jumps_definition.h  helper.cpp  helper.h  labels.cpp  labels.h  registers.cpp  registers.h
arch/DSL/: commands_syntax.h
asm/: asm.cat  asm.cpp  asm.h
dis/: dis.cat  dis.cpp  dis.h
libs/: baselib.cpp  baselib.h  file_funcs.cpp  file_funcs.h  stack.cpp  stack.h
programs/: chess_field.txt  circle.txt  factorial.txt  square_equation.txt
